[project]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Tautvydas Belgeras",email = "t.belgeras@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
